[bug 875692] Fix overlapping content in footer

--- a/fjord/base/static/css/feedback.less
+++ b/fjord/base/static/css/feedback.less
@@ -494,7 +494,7 @@ footer {
 
   form {
     position: absolute;
-    top: 0;
+    top: 15px;
     right: 0;
 
     .selectbox {
